# khronos-stubs

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE  NOTICE  README.md  genstubs.py
fakelibc/include/: stdint.h
share/pkgconfig/: egl.pc  glesv1_cm.pc  glesv2.pc
stubs/: egl_stubs.c  gles2_stubs.c  gles_stubs.c
templates/: egl_template.c  gles2_template.c  gles_template.c
